--- a/YouDev/src/assets/main.scss
+++ b/YouDev/src/assets/main.scss
@@ -6,25 +6,12 @@
 
 .wrapperHeader{
     display: flex;
+    justify-content: space-around;
 
-    .searchBar{
-        width: 55%;
-        border-radius: 50;
-        height: 5vh;
-    }
-
-    .darkMode{
-        display: flex;
-
-        .light, .dark{
-            width: 55%;
-            height: 3vh;
+    .darkMod{
+        button{
+            padding: 10px;
         }
-    
-        .light{
-            background-color: white;
-        }
-    
         .dark{
             background-color: black;
             color: white;
@@ -32,11 +19,103 @@
     }
 
     .profile{
-        height: 5vh;
-        width: 20%;
-
         .PP{
-            width: 20%;
+            width: 7%;
         }
+    }
+}
+
+.nav{
+    padding: 10px;
+
+    ul{
+        display: flex;
+        justify-content: space-around;
+
+        li{
+            list-style: none;
+        } 
+        & :hover{
+            scale: 1.5;
+        }
+    }
+}
+
+.wrapperFilter{
+
+    .filter{
+        padding: 10px 0;
+        display: flex;
+        justify-content: space-around;
+
+        li{
+            border: solid 2px black;
+            border-radius: 10px;
+            padding: 10px;
+            list-style: none;
+        }
+    }
+}
+
+.modal{
+        display: flex;
+        justify-content: center;
+        width: 75%;
+        position: absolute;
+
+        .modalContent{
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            width: 100%;
+            padding: 10px 60px;
+            background-color: rgb(129, 43, 43);
+            border: solid 1px black;
+
+            .close{
+                text-align: right;
+                font-size: 44px;
+                background-color: aqua;
+
+                .cross{
+                    width: 3%;
+                }
+            }
+
+            .arrowLeft, .arrowRight{
+                display: block;
+                width: 3%;
+            }
+
+            img{
+                width: 100%;
+            }
+
+            a{
+                text-decoration: none;
+                color: white;
+            }
+        }
+}
+
+.wrapperItems{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    gap: 15px;
+    padding: 10px 0;
+    background-color: blue;
+
+    .item-card{
+    border-radius: 10px;
+    width: 30%;
+    background-color: aqua;
+
+    img{
+        border-radius: 10px 10px  0 0;
+        width: 100%;
+    }
     }
 }
