--- a/YouDev/src/assets/main.scss
+++ b/YouDev/src/assets/main.scss
@@ -17,12 +17,6 @@
             color: white;
         }
     }
-
-    .profile{
-        .PP{
-            width: 7%;
-        }
-    }
 }
 
 .nav{
@@ -34,25 +28,14 @@
 
         li{
             list-style: none;
+           
+            a{
+                text-decoration: none;
+                color: black;
+            }
         } 
         & :hover{
-            scale: 1.5;
-        }
-    }
-}
-
-.wrapperFilter{
-
-    .filter{
-        padding: 10px 0;
-        display: flex;
-        justify-content: space-around;
-
-        li{
-            border: solid 2px black;
-            border-radius: 10px;
-            padding: 10px;
-            list-style: none;
+            scale: 1.1;
         }
     }
 }
@@ -117,5 +100,76 @@
         border-radius: 10px 10px  0 0;
         width: 100%;
     }
+    }
+}
+
+.wrapperTechno{
+    .techno{
+        display: flex;
+    }
+}
+
+.wrapperContact{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+
+    .content{
+        display: flex;
+        justify-content: center;
+
+        form{   
+            padding: 15px;
+            width: 70%;
+            display: flex;
+            flex-direction: column;
+            gap :10px;
+
+            input, textarea {
+                font-size: 15px;
+                color: red;
+                padding: 5px;
+                height: 5vh;
+                border: solid black 1px;
+                border-radius: 25px;
+                
+                &::placeholder {
+                    color: blue;
+                }
+            }
+            
+            textarea{
+                padding: 10px;
+                height: 15vh;
+                border-radius: 20px;
+            }
+
+            .submit{
+                font-size: 20px;
+            }
+        }
+    }
+}
+
+.wrapperFooter{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    background-color: aqua;
+    bottom: 0;
+    height: 20vh;
+
+    .socialMedia{
+        display: flex;
+
+        a{
+            text-align: center;
+        }
+
+        img{
+            width: 10%;
+        }
     }
 }
